--- a/Project/Presentation.Rmd
+++ b/Project/Presentation.Rmd
@@ -333,7 +333,7 @@ carmarket_price_group %>%
 ```
 ---
 ## 3. Shiny App
-![](https://pjournal.github.io/boun01g-data-mine-r-s/Project/images/shiny_app.png)
+![](https://github.com/pjournal/boun01g-data-mine-r-s/blob/gh-pages/Project/images/shiny_app.PNG?raw=true)
 ---
 ## 4. Prediction Model
 .pull-left[
@@ -345,7 +345,7 @@ carmarket_price_group %>%
 - Best MSE: 1581517991
 - Best R-Squared: 0.831
 ]
-.pull-rigth[
+.pull-right[
 ![](https://pjournal.github.io/boun01g-data-mine-r-s/Project/images/model.jpeg)
 ]
 
